# unvoga

./: .gitignore  Cargo.toml  LICENSE  README.md  output.txt  runvis.bat  sandbox.bat  todo.md
assets/debug/generators/: mesas.simp  mountains.simp  stone.simp  test.simp
assets/debug/models/: middle_wedge.glb  middle_wedge.json
assets/shaders/voxel/: voxel.wgsl
benches/: invert_bit_benchmark.rs
src/: lib.rs  main.rs  prelude.rs  sandbox.rs
src/core/: error.rs  macros.rs  mod.rs
src/core/collections/: grid.rs  mod.rs  objectpool.rs
src/core/io/: mod.rs
src/core/math/: aabb.rs  bit.rs  coordmap.rs  flip.rs  fnv1a.rs  grid.rs  maptable.rs  math.rs  mod.rs  num.rs  orient_table.rs  orientation.rs  rect.rs  rotation.rs  vector.rs
src/core/util/: counter.rs  extensions.rs  functional.rs  lend.rs  mod.rs  modelimporter.rs  texture_array.rs  textureregistry.rs  traits.rs
src/core/voxel/: axis.rs  block.rs  blocklayer.rs  blockregistry.rs  blocks.rs  blockstate.rs  chunk.rs  coord.rs  direction.rs  engine.rs  faceflags.rs  faces.rs  level_of_detail.rs  meshing.rs  mod.rs  occluder.rs  occlusion_shape.rs  occlusionshape.rs  prelude.rs  statevalue.rs
src/core/voxel/lighting/: lightargs.rs  mod.rs
src/core/voxel/procgen/: mod.rs  noise.rs  noise_chunk.rs  worldgenerator.rs
src/core/voxel/region/: header.rs  mod.rs  regioncoord.rs  regionfile.rs  regiontable.rs  sectormanager.rs  sectoroffset.rs  timestamp.rs
src/game/: cameras.rs  mod.rs  settings.rs  voxel_world.rs
tooling/: corner_inner_wedge.blend  guided_block.blend  guided_block.blend1
(+21 files in other folders)
