[package]
name = "unvoga"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# Remove dynamic_linking feature when building for release
# https://bevyengine.org/learn/quick-start/getting-started/setup/#enable-fast-compiles-optional
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_egui = "0.27.1"
bytemuck = "1.16.1"
chrono = "0.4.38"
flate2 = "1.0.30"
gltf = "1.4.1"
hashbrown = "0.14.5"
image = "0.25.1"
itertools = "0.13.0"
noise = "0.9.0"
paste = "1.0.15"
rand = "0.8.5"
rollgrid = { git = "https://github.com/ErisianArchitect/rollgrid.git" }
serde = "1.0.204"
serde_json = "1.0.121"
sha2 = "0.10.8"
splines = { version = "4.3.1", features = ["glam"] }
thiserror = "1.0.61"
worldgen = { path = "./crates/worldgen" }
# uniform-cubic-splines = "0.1.8"
